kubernetes/retail-store/db-external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
  namespace: retail-app
spec:
  type: ExternalName
  externalName: project-bedrock-mysql.cajmqcu2syh5.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  namespace: retail-app
spec:
  type: ExternalName
  externalName: project-bedrock-mysql.cajmqcu2syh5.us-east-1.rds.amazonaws.com
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: retail-app
spec:
  type: ExternalName
  externalName: project-bedrock-mysql.cajmqcu2syh5.us-east-1.rds.amazonaws.com
